--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,22 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.6.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
+    id 'idea'
 }
 
-group = 'com.github.cdmatta'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
-
-repositories {
-	mavenCentral()
+ext {
+    lombokVersion = '1.18.12' // For annotation processing
+    springBootVersion = '2.2.6.RELEASE'
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-}
+allprojects {
+    group = 'com.github.cdmatta'
 
-test {
-	useJUnitPlatform()
+    repositories {
+        mavenCentral()
+    }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
 }
