--- a/exp-test/build.gradle
+++ b/exp-test/build.gradle
@@ -5,7 +5,7 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_11
 
 dependencies {
-    api platform(project(':exp-dependencies'))
+    api platform(project(':exp-platform'))
 
     implementation 'org.projectlombok:lombok'
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
