--- a/exp-test/build.gradle
+++ b/exp-test/build.gradle
@@ -7,15 +7,14 @@ sourceCompatibility = JavaVersion.VERSION_11
 dependencies {
     api platform(project(':exp-platform'))
 
-    implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-
-    testImplementation 'org.projectlombok:lombok'
-    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
-
     api('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 }
 
 test {
