--- a/exp-platform/build.gradle
+++ b/exp-platform/build.gradle
@@ -8,4 +8,7 @@ javaPlatform {
 
 dependencies {
     api platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    constraints {
+        api "commons-io:commons-io:${commonsIoVersion}"
+    }
 }
