--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ rootProject.name = "experiments-java"
 
 include "exp-platform"
 include "exp-test"
-include "projects:sam"
+include "projects:sam:sam-service"
