dpkg - from archive

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,4 @@ rootProject.name = "experiments-java"
 include "exp-platform"
 include "exp-test"
 include "projects:sam:sam-service"
+include "projects:dpkg"
