--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 ext {
     commonsIoVersion = '2.6'
+    commonsCsvVersion = '1.8'
     lombokVersion = '1.18.12' // For annotation processing
     springBootVersion = '2.2.7.RELEASE'
 }
